<?xml version="1.0" encoding="utf-8"?>
<!--Copyright 2014 Yaroslav Mytkalyk-->

<!--Licensed under the Apache License, Version 2.0 (the "License");-->
<!--you may not use this file except in compliance with the License.-->
<!--You may obtain a copy of the License at-->

<!--http://www.apache.org/licenses/LICENSE-2.0-->

<!--Unless required by applicable law or agreed to in writing, software-->
<!--distributed under the License is distributed on an "AS IS" BASIS,-->
<!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--See the License for the specific language governing permissions and-->
<!--limitations under the License.-->
<resources>

    <string translatable="false" name="app_name">Pure File Manager</string>
    
    <string name="root">root</string>
    <string name="empty">Empty</string>
    <string translatable="false" name="minus">-</string>

    <string name="storage_internal">Internal storage</string>
    <string name="storage_sdcard">SD Card</string>
    <string name="storage_usb">USB</string>

    <!-- Browser -->
    <string name="directory_not_exists">The directory “%1$s” does not exist</string>
    <string name="target_is_not_a_directory">The target is not a directory</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>

    <string name="remove">Remove</string>
    <string name="search_files">Search files</string>
    <string name="no_results">No Results</string>

    <!-- Rename -->
    <string name="rename">Rename</string>
    <string name="new_name">New Name</string>
    <string name="rename_failed">Failed to rename “%1$s” to “%2$s”</string>

    <string name="no_apps_to_open">No applications installed to open this file</string>
    <string name="could_not_open_file_">Could open this file:u0020</string>
    
    <string name="menu_partition">Partition Info</string>
    <string name="menu_search">Search</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_bookmarks_new">Add current location</string>
    <string name="menu_new_file">New File</string>
    <string name="menu_new_folder">New Folder</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_add_to_media_store">Add to Media Store</string>
    <string name="menu_view_as_list">View as List</string>
    <string name="menu_view_as_grid">View as Grid</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_by_name_asc">By name ascending</string>
    <string name="menu_sort_by_name_desc">By name descending</string>
    <string name="menu_sort_by_type_asc">By type ascending</string>
    <string name="menu_sort_by_type_desc">By type descending</string>
    <string name="menu_sort_by_date_asc">By date ascending</string>
    <string name="menu_sort_by_date_desc">By date descending</string>
    <string name="menu_sort_by_size_asc">By size ascending</string>
    <string name="menu_sort_by_size_desc">By size descending</string>

    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_properties">Properties</string>
    
    <string name="menu_select_all">Select all</string>
    
    <string name="_selected">%1$d selected</string>
    
    <!-- Preferences -->
    <string name="preference_category_view">View Settings</string>
    <string name="preference_theme">Theme</string>
    <string name="preference_show_hidden">Show hidden files</string>
    <string name="preference_show_permissions">Show permissions</string>
    <string name="preference_show_preview">Show previews</string>
    <string name="preference_show_modified">Show modified time</string>
    <string name="preference_show_size">Show size</string>
    
    <string name="preference_category_performance">Performance</string>
    <string name="preference_use_commandline">Use Busybox</string>
    <string name="preference_work_as_superuser">Work as superuser</string>
    
    <string name="preference_category_startup">Startup</string>
    <string name="preference_home_directory">Home directory</string>
    
    <!-- New File / Directory -->
    <string name="file_exists">File already exists</string>
    <string name="could_not_create_dir">Could not create directory</string>
    <string name="could_not_create_file">Could not create file</string>
    <string name="dialog_new_folder_title">Create New Directory</string>
    <string name="dialog_new_file_title">Create New File</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    
    <!-- New Bookmark -->
    <string name="bookmark_exists">The bookmark already exists</string>
    <string name="bookmark_not_added">Could not add bookmark</string>
    
    <!-- Progress -->
    <string name="progress_deleting_files">Deleting files…</string>

    <plurals name="progress_moving_n_files">
        <item quantity="one">Moving %1$d file</item>
        <item quantity="other">Moving %1$d files</item>
    </plurals>

    <plurals name="progress_copying_n_files">
        <item quantity="one">Copying %1$d file</item>
        <item quantity="other">Copying %1$d files</item>
    </plurals>
    
    <!-- Copy / Cut -->
    <plurals name="cut_n_files_to_clipboard">
        <item quantity="one">Cut %1$d file to clipboard</item>
        <item quantity="other">Cut %1$d files to clipboard</item>
    </plurals>

    <plurals name="copied_n_files_to_clipboard">
        <item quantity="one">Copied %1$d file to clipboard</item>
        <item quantity="other">Copied %1$d files to clipboard</item>
    </plurals>

    <string name="not_enough_space_message">Not enough space to paste files. Available %1$s, required %2$s.</string>
    
    <string name="dialog_overwrite_title">Target file already exists</string>
    <string name="dialog_overwrite_message">This action will overwrite destination.</string>
    <string name="dialog_overwrite_source">Source</string>
    <string name="dialog_overwrite_destination">Destination</string>
    <string name="dialog_overwrite_abort">Abort</string>
    <string name="dialog_overwrite_skip">Skip</string>
    <string name="dialog_overwrite_replace">Replace</string>
    <string name="dialog_overwrite_write_into">Write into</string>
    <string name="dialog_overwrite_apply_to_all">Apply to all</string>
    <string name="dialog_overwrite_replace_failed">Failed to replace “%1$s”</string>

    <string name="dialog_copy_failed">Failed to copy the following files</string>
    <string name="dialog_move_failed">Failed to move the following files</string>
    <string name="dialog_delete_failed">Failed to delete the following files</string>

    <string name="canceling_suffix">\u0020(canceling…)</string>

    <!-- Delete -->
    <string name="dialog_delete_title">The following files will be deleted:</string>
    
    <!-- Permissions -->
    <string name="apply">Apply</string>
    <string name="applying_failed">Applying failed</string>
    <string name="permissions_changed">Permissions changed</string>
    
    <string name="owner">Owner:</string>
    <string name="group">Group:</string>
    <string name="others">Others:</string>
    
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="execute">Execute</string>
    
    <!-- Properties -->
    <string name="info">Info</string>
    <string name="permissions">Permissions</string>
    
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="mime">Mime:</string>
    <string name="size">Size:</string>
    <string name="modified">Modified:</string>
    
    <string name="type_file">File</string>
    <string name="type_directory">Directory</string>
    <string name="type_symlink">Symlink</string>
    
    <string name="location">Location:</string>
    <string name="filesystem">Filesystem:</string>
    <string name="total">Total space:</string>
    <string name="free">Free space:</string>
    <string name="available">Available space:</string>
    <string name="block_size">Block size:</string>
    <string name="used">Used:</string>
    
    <!-- Search -->
    <string name="search_denied_message">Access denied for the following locations</string>
    
    <!-- Quit Dialog -->
    <string name="dialog_quit_message">Do you want to quit?</string>

    <!-- Sharing -->
    <plurals name="no_applications_can_share">
        <item quantity="one">No application can share this file</item>
        <item quantity="other">No application can share these files</item>
    </plurals>


</resources>