<?xml version="1.0" encoding="utf-8"?>
<!--Copyright 2014 Yaroslav Mytkalyk-->

<!--Licensed under the Apache License, Version 2.0 (the "License");-->
<!--you may not use this file except in compliance with the License.-->
<!--You may obtain a copy of the License at-->

<!--http://www.apache.org/licenses/LICENSE-2.0-->

<!--Unless required by applicable law or agreed to in writing, software-->
<!--distributed under the License is distributed on an "AS IS" BASIS,-->
<!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--See the License for the specific language governing permissions and-->
<!--limitations under the License.-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@android:id/paste"
        android:icon="@drawable/holo_light_action_paste"
        android:showAsAction="always"
        android:title="@string/menu_paste"/>
    
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/holo_light_action_refresh"
        android:showAsAction="always"
        android:title="@string/menu_refresh"/>
    
    <item
        android:id="@android:id/content"
        android:showAsAction="ifRoom"
        android:title=""/>

    <item
        android:id="@+id/menu_file_new"
        android:icon="@drawable/holo_light_action_file_new"
        android:showAsAction="ifRoom"
        android:title="@string/menu_new_file"/>

    <item
        android:id="@+id/menu_folder_new"
        android:icon="@drawable/holo_light_action_folder_new"
        android:showAsAction="ifRoom"
        android:title="@string/menu_new_folder"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/holo_light_action_search"
        android:title="@string/menu_search"
        android:showAsAction="ifRoom"/>
    
    <item
        android:icon="@drawable/holo_light_action_sort"
        android:title="@string/menu_sort"
        android:showAsAction="ifRoom">
        
        <menu>
        
        	<item
        		android:id="@+id/menu_sort_name_asc"
        		android:title="@string/menu_sort_by_name_asc"
        		android:showAsAction="never"/>
        
        	<item
        		android:id="@+id/menu_sort_name_desc"
        		android:title="@string/menu_sort_by_name_desc"
        		android:showAsAction="never"/>
        
        	<item
        		android:id="@+id/menu_sort_type_asc"
        		android:title="@string/menu_sort_by_type_asc"
        		android:showAsAction="never"/>
        
        	<item
        		android:id="@+id/menu_sort_type_desc"
        		android:title="@string/menu_sort_by_type_desc"
        		android:showAsAction="never"/>
        
        	<item
        		android:id="@+id/menu_sort_date_asc"
        		android:title="@string/menu_sort_by_date_asc"
        		android:showAsAction="never"/>
        
        	<item
        		android:id="@+id/menu_sort_date_desc"
        		android:title="@string/menu_sort_by_date_desc"
        		android:showAsAction="never"/>
        
        	<item
        		android:id="@+id/menu_sort_size_asc"
        		android:title="@string/menu_sort_by_size_asc"
        		android:showAsAction="never"/>
        
        	<item
        		android:id="@+id/menu_sort_size_desc"
        		android:title="@string/menu_sort_by_size_desc"
        		android:showAsAction="never"/>
        </menu>
    </item>
    
    <item
        android:id="@+id/menu_partition"
        android:showAsAction="never"
        android:title="@string/menu_partition"/>
    
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/holo_light_action_settings"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>