<?xml version="1.0" encoding="utf-8"?>
<!--Copyright 2014 Yaroslav Mytkalyk-->

<!--Licensed under the Apache License, Version 2.0 (the "License");-->
<!--you may not use this file except in compliance with the License.-->
<!--You may obtain a copy of the License at-->

<!--http://www.apache.org/licenses/LICENSE-2.0-->

<!--Unless required by applicable law or agreed to in writing, software-->
<!--distributed under the License is distributed on an "AS IS" BASIS,-->
<!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--See the License for the specific language governing permissions and-->
<!--limitations under the License.-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@android:id/copy"
        android:icon="?attr/action_copy"
        android:title="@string/menu_copy"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@android:id/cut"
        android:icon="?attr/action_cut"
        android:title="@string/menu_cut"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@android:id/edit"
        android:icon="?attr/action_edit"
        android:title="@string/menu_rename"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/menu_delete"
        android:icon="?attr/action_remove"
        android:title="@string/menu_delete"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_share"
        android:icon="?attr/action_share"
        android:title="@string/menu_share"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/properties"
        android:icon="?attr/action_info"
        android:title="@string/menu_properties"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/select_all"
        android:title="@string/menu_select_all"
        android:showAsAction="never"/>

</menu>