<?xml version="1.0" encoding="utf-8"?>
<!--Copyright 2014 Yaroslav Mytkalyk-->

<!--Licensed under the Apache License, Version 2.0 (the "License");-->
<!--you may not use this file except in compliance with the License.-->
<!--You may obtain a copy of the License at-->

<!--http://www.apache.org/licenses/LICENSE-2.0-->

<!--Unless required by applicable law or agreed to in writing, software-->
<!--distributed under the License is distributed on an "AS IS" BASIS,-->
<!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--See the License for the specific language governing permissions and-->
<!--limitations under the License.-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:stretchColumns="1"
    android:shrinkColumns="1"
    tools:context="com.docd.purefm.browser.BrowserActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/name"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:textIsSelectable="false"
            tools:text="photo.jpg"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/location"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:textIsSelectable="false"
            tools:text="/sdcard/Pictures"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/type"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:textIsSelectable="false"
            tools:text="File"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/mime"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:text="@string/minus"
            android:textIsSelectable="false"
            tools:text="image/jpeg"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/size"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:text="@string/minus"
            android:textIsSelectable="false"
            tools:text="1 MiB"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/modified"
            android:textIsSelectable="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="left|center_vertical"
            android:textIsSelectable="false"
            tools:text="29/01/2014 16:29"/>
    </TableRow>

</TableLayout>